# bolt-selectors

./: .gitignore  CHANGELOG.md  LISCENSE  README.md  pyproject.toml
.github/workflows/: main.yml
bolt_selectors/: __init__.py  parse.py  plugin.py  selector.py  types.py
examples/ast/: beet.yml  foo.mcfunction
examples/basic_selector/: beet.yml  entry.bolt
examples/basic_selector/src/data/test/modules/: entry.bolt
examples/codegen/: beet.yml
examples/interpolation/: beet.yml  entry.bolt
examples/selector_building/: entry.bolt
examples/selector_combination/: beet.yml  entry.bolt
src/bolt_selectors/: __init__.py
tests/: test_usage.py
tests/snapshots/: examples__build_ast__0.pack.md  examples__build_basic_selector__0.pack.md  examples__build_codegen__0.pack.md  examples__build_interpolation__0.pack.md  examples__build_selector_building__0.pack.md  examples__build_selector_combination__0.pack.md
